<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnimeTaste</string>
    <string name="action_settings">设置</string>
    <string name="only_for_wifi">Only for Wifi</string>
    <string name="use_hd">高清视频</string>
    <string name="suggestion">意见反馈</string>
    <string name="recommend_to_friend">推荐给小伙伴</string>
    <string name="clear_cache">清空缓存</string>
    <string name="focus_us">关注我们</string>
    <string name="cancel_auth">取消所有授权</string>
    <string name="hint_suggesion">给我们提意见</string>
    <string name="send">发送</string>
    <string name="empty">_(:з」∠)_</string>
    <string name="thanks">感谢您的反馈</string>
    <string name="auth_failed">认证失败</string>
    <string name="follow_success">关注成功</string>
    <string name="share_via">分享给小伙伴</string>
    <string name="share_title">AnimeTaste分享给你</string>
    <string name="share_video_title">《%1$s》分享给你</string>
    <string name="share_video_body">《%1$s》这部动画真的很棒，分享给你。%2$s @AnimeTaste全球动画精选 App下载:http://i.animetaste.net</string>
    <string name="share_app_body">AnimeTaste（品赏艾尼莫）是国内首个关注独立动画的网站。
移动版聚焦更新的全球独立动画的传播，让您随时随地能观看动画，分享快乐给更多好友。品味动画，重拾幻想。官方：http://i.animetaste.net/ 微博：@AnimeTaste全球动画精选</string>
    <string name="error_load">获取动画失败，请检查网络是否正常</string>
    <string name="delete_title">提示</string>
    <string name="delete_body">确定要删除吗？</string>
    <string name="delete_ok">确定</string>
    <string name="delete_cancel">取消</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete_all">全部删除</string>
    <string name="delete_all_tip">全部删除?</string>
    <string name="delete_null">这里空空如也，快去收藏些自己喜爱的动画吧</string>
    <string name="only_wifi_title">网络提示</string>
    <string name="only_wifi_body">不是Wifi网络，继续么？</string>
	<string name="get_data_error">获取数据出错，为您转向离线</string>
    <string name="touch_to_retry">获取失败，轻触以重试</string>
    <string name="only_wifi_ok">继续</string>
    <string name="only_wifi_cancel">退出</string>
    <string name="fav_success">收藏成功</string>
    <string name="fav_fail">收藏失败</string>
    <string name="fav_del_success">删除成功</string>
    <string name="fav_del_fail">删除失败</string>
    <string name="recommend">相关推荐</string>
	<string name="interview">访谈录</string>
	<string name="load_recommends_error">加载推荐失败</string>

    <!-- Player -->
    <string name="play_error">对不起，视频暂时没法播放，尝试网页播放</string>
    <string name="offline_file_missing">离线文件被删除，是否尝试从网络播放？</string>
    <string name="redownload_tips">您下载过这个视频，而且文件依然存在，是要重新下载么？</string>
    <string name="tip">爱心提示</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="play_offline">视频已离线</string>
    <string name="play_no_net">没有网络</string>
    <string name="no_wifi_force_play">没有Wifi，用流量播放？</string>
    <!-- Player -->


    <!-- Login -->
    <string name="choose_login">选择登录方式</string>
    <string name="cancel_login">取消</string>
    <string name="qq">QQ</string>
    <string name="weibo">新浪微博</string>
    <string name="publish_comment">发布评论</string>
    <string name="cancel_publish">取消</string>
    <string name="publish">发送</string>
    <string name="comment_nothing">_(:з」∠)_ 什么都没有写&#8230;</string>
    <string name="comment_too_short">一个好的评论，应该不少于五个字哦</string>
    <!-- Login -->


    <!-- Rate -->
    <string name="rate_share_message">花片刻时间把AnimeTaste分享给更多的小伙伴吧？</string>
    <string name="rate_share_i_do">我愿意</string>
    <string name="rate_share_title">●ω●</string>
    <string name="rate_share_sorry">我考虑下</string>
    <!-- Rate -->
    <!-- Comment -->
    <string name="comment_success">评论成功</string>
    <string name="comment_failed">评论出现问题</string>
    <string name="load_more_comments">载入更多评论&#8230;</string>
    <string name="no_more_comments">没有更多评论</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="logout_success">退出登录成功</string>
    <string name="write_something">写下你的感想&#8230;</string>
    <!-- Comment -->


    <!-- Settings -->
    <string name="rate_for_us">为我们评分</string>
    <string name="can_not_open_market">无法打开市场</string>
    <!-- Settings -->

	<!-- Drawer -->
	<string name="guess">猜你喜欢</string>
	<string name="latest">最新视频</string>
	<string name="my_fav">我的收藏</string>
	<string name="category">分类浏览</string>
    <string name="my_download">我的下载</string>
	<!-- Drawer -->

    <!-- Download -->
    <string name="no_network">没有连接网络</string>
    <string name="no_wifi_download">没有连接Wifi，要用流量下载吗？</string>
    <string name="stop_mission">终止下载『%1$s』？</string>
    <string name="surely_delete">彻底删除『%1$s』？</string>
    <string name="downloading">正在下载</string>
    <string name="delete_all_downloaded">删除所有下载（含文件）？</string>
    <string name="delete_finish">删除完成</string>
    <!-- Download -->

	<!-- Load -->
	<string name="init_failed">初始化失败</string>
	<string name="web_loading">正在加载中&#8230;</string>
	<!-- Load -->

	<!-- Video -->
	<string name="end">到头了</string>
	<!-- Video -->

	<!-- Ad -->
	<string name="open_in_browser">浏览器打开</string>
	<!-- Ad -->

	<!-- What's new-->
	<string name="intro_drawer">这里有个小抽屉喔~ :)</string>
	<!-- What's new-->

    <!-- Menu Title-->
    <string name="ic_action_fav">喜欢</string>
    <string name="ic_action_download">下载</string>
    <!-- Menu Title-->

    <!-- Cache -->
    <string name="clear_ok">清理完成</string>
    <!-- Cache -->

    <!-- Notification -->
    <string name="download_success">下载成功</string>
    <string name="download_speed">速度:%1$s</string>
    <string name="download_pause">暂停</string>
    <string name="download_resume">继续</string>
    <string name="download_cancel">停止</string>
    <string name="download_downloading">正在下载</string>
    <string name="download_preparing">准备下载</string>
    <string name="download_start">开始下载</string>
    <string name="download_error">下载失败</string>
    <string name="start_downloading">开始下载</string>
    <string name="download_action_tips">Tips: 长按终止下载或删除</string>
    <!-- Notification -->

    <!-- Time -->
    <string name="time_format">00:00</string>
    <!-- Time -->
</resources>